client/src/components/Styles/general.css
/* ... */
.containerButtonSideBar .active > svg {
  
}

/* Profile picture or avatar */
.displayProfilePic,
#profile-pic {
  height: 140px;
  width: 140px;
  background-color: var(--header-color);
  border-radius: 4px;
  display: flex;
  border: none;
  /* box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.25); */
  margin-bottom: 14px;
  object-fit: cover;
  overflow: hidden;
}

.displayProfilePic img,
#profile-pic img {
  scale: 1.1;
}

/*logout button*/
/*!!!May be removed later!!!*/
.Logout {
  display: flex;
  align-items: center;
  justify-content: center;
}

.Logout button {
  background-color: white;
  color: black;
  position: absolute;
  bottom: 0;
  margin-bottom: 40px;
  width: 120px;
  height: 45px;
  font-size: 18px;
  border: none;
  border-radius: 12px;
  /* outline: solid var(--orange) 2px; */
  font-weight: 600;
}

.Logout button:hover {
  background-color: rgb(199, 198, 198);
}

/* .Logout button:hover {
    transition-duration: 0.25s;
    background-color: var(--orange);
    color: white;
    outline: solid var(--orange) 2px;
    cursor: pointer;
} */


/*create button*/
.Create {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.Create>.error {
  text-shadow: rgba(0, 0, 0, 0.2) 0px 0px 10px;
  position: absolute;
  bottom: 100px;
}

.Create>button {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--create-bg);
  position: absolute;
  bottom: 0;
  margin-bottom: 40px;
  width: 194px;
  height: 55px;
  font-size: 20px;
  /* padding-bottom: 5px; */
  border: none;
  border-radius: 30px;
  /* outline: solid var(--orange) 2px; */
  font-weight: bold;

  p {
    margin-left: 15px;
    color: var(--create-text);
  }
}

.Create>button:hover {
  background-color: var(--create-text);
  color: var(--create-bg);
  filter: drop-shadow(0px 5px 3px var(--shadow-color));
  transition: 0.25s;
  border: 2px solid var(--create-bg);

  svg {
    filter: invert(1) saturate(0) brightness(0.5);
    transition: 0.25s;
  }
  p {
    color: var(--create-bg);
    transition: 0.25s;
  }
}

/*responsive stuff for sidebar*/
@media only screen and (max-width: 799px) {
  .sideBarContainer {
    width: 100vw;
    height: 50px;
    /*border: solid black 2px;*/
    position: fixed;
    bottom: 10px;
    background-color: var(--header-color);
    z-index: 1;
    /*box-shadow: rgba(0, 0, 0, 0.25) 0px 8px 16px;*/
  }

  .ProfileContainer {
    width: 15vw;
  }

  .containerButtonSideBar {
    display: flex;
    flex-direction: row;
    /* cursor: pointer; */
    gap: 20px;
    align-items: center;
    justify-content: space-evenly;
    height: 80px;
    background-color: var(--header-color);
  }

  .containerButtonSideBar button {
    width: 20vw;
    height: 45px;
    margin: 0 5px 20px 5px;
    padding-left: calc((100vw - 160px) / 10);
    padding-right: auto;
  }

  .containerButtonSideBar button:hover {
    transition-duration: 0.25s;
    background-color: var(--invert-text);
  }

  .containerButtonSideBar button.active {
    background-color: var(--primary-color);
    transition: 0.25s;
    font-weight: bold;
    color: var(--invert-text);

    img {
      filter: invert(1);
    }
  }
}

@media only screen and (max-width: 500px) {
  .containerButtonSideBar {
    gap: 10px;
  }
}

/*
/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
------------------------------------------------------------------------------------------------
Page popup style rules
------------------------------------------------------------------------------------------------
\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\//\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
*/

/*rules for the cover a popup uses*/
.popup-cover {
  display: block;
  position: fixed;
  background-color: black;
  opacity: 50%;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 2;
}

/*rules for the popup itself*/
.popup {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: fixed;
  background: var(--modal-gradient);
  border-radius: 10px;
  box-shadow: 0px 0px 10px 0px var(--shadow-color);
  /* max-width: 1321px; */
  max-width: 1121px;
  max-height: 849px;
  opacity: 100%;
  z-index: 3;
  /* height: 849px; */
}

/* Used inside of popup object for smaller popups */
.small-popup {
  max-width: 456px;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--bg-color);
  border-radius: 10px;
  box-shadow: 0px 0px 10px 0px var(--shadow-color);
  opacity: 100%;
  z-index: 3;
  padding: 20px 40px;
}

@media (max-width: 576px) {
  .popup {
    /* max-width: 921px;
    max-height: 781px;
    width: 64vw; */
    /* height: 95vw; */
  }

  /* Smaller popups within another popup should scale */
  .popup .popup {
    max-width: 50vw;
  }  
}

.popup-container {
  display: flex;
  position: fixed;
  align-items: center;
  justify-content: center;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 3;
  border-radius: 10px;
}

#popup-close {
  position: absolute;
  border-radius: 4px;
  top: 10px;
  right: 10px;
  background: none;
}

.onFront {
  z-index: 5;
}

.popup-back {
  position: absolute;
  border-radius: 4px !important;
  border: none !important;
  top: 0px;
  left: 0px;
  background: none !important;
  margin: min(1.59vw, 24px) 0 0 min(1.59vw, 24px) !important;
  display: flex;
  align-items: center;

  img {
    height: 24px;
    /* Font-size is meant to be 20pt, which corresponds to 24px here */
  }
}

.popup-close {
  position: absolute;
  border-radius: 4px !important;
  border: none !important;
  top: 0px;
  right: 0%;
  width: 40px !important;
  height: 40px !important;
  background: none !important;
  margin: 0 !important;
  z-index: 4;
  padding: 8px 18px 0px 0px;
}

@media screen and (max-width: 1180px) {
  .popup-close, .popup-close.popup-close-edit {
    margin: 0 8px 0 0 !important;
  }
}
/* ... */

